[package]
name = "xattr"
version = "0.1.7"
authors = ["Steven Allen <steven@stebalien.com>"]
description = "unix extended filesystem attributes"

documentation = "https://stebalien.github.io/xattr/xattr/"
repository = "https://github.com/Stebalien/xattr"
keywords = ["xattr", "filesystem", "unix"]
license = "MIT/Apache-2.0"

[dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "2"
