[package]
name = "xattr"
edition = "2021"
version = "1.4.0"
authors = ["Steven Allen <steven@stebalien.com>"]
description = "unix extended filesystem attributes"

documentation = "https://docs.rs/xattr"
repository = "https://github.com/Stebalien/xattr"
keywords = ["xattr", "filesystem", "unix"]
license = "MIT/Apache-2.0"

[features]
default = ["unsupported"]
# Adds a dummy implementation for unsupported platforms. This is useful when
# developing platform-independent code that doesn't absolutely need xattr
# support.
#
# You can disable this feature if you want compilation to fail on unsupported
# platforms. This would make sense if you absolutely need xattr support.
unsupported = []

[dependencies.rustix]
version = "0.38.34"
default-features = false
features = ["fs", "std"]

# Enable the `std` feature here so that `std::os::raw` is used.
[target.'cfg(target_os = "linux")'.dependencies.linux-raw-sys]
version = "0.4.11"
default-features = false
features = ["std"]

[target.'cfg(any(target_os = "freebsd", target_os = "netbsd"))'.dependencies]
libc = "0.2.150"

[dev-dependencies]
rustix = { version = "0.38.28", default-features = false, features = ["net"] }
tempfile = "3"
